@@ -34,6 +34,7 @@ from pysphere.resources import VimService_services as VI
 from pysphere import VIException, VIApiException, FaultTypes
 from pysphere.vi_virtual_machine import VIVirtualMachine
 from pysphere.vi_performance_manager import PerformanceManager
+from pysphere.vi_task_history_collector import VITaskHistoryCollector
 from pysphere.vi_mor import VIMor, MORTypes
 
 class VIServer:
@@ -153,6 +154,20 @@ class VIServer:
     def get_performance_manager(self):
         """Returns a Performance Manager entity"""
         return PerformanceManager(self, self._do_service_content.PerfManager)
+
+    def get_task_history_collector(self, entity=None, recursion=None, 
+                                   states=None):
+        """Creates a Task History Collector that gathers Task info objects.
+        based on the provides filters.
+          * entity: Entity MOR, if provided filters tasks related to this entity
+          * recursion: If 'entity' is provided then recursion is mandatory.
+          specification of related managed entities in the inventory hierarchy
+          should be either: 'all', 'children', or 'self'
+          * states: if provided, limits the set of collected tasks by their 
+          states. Should be a list or one of 'queued', 'running', 'error', or
+          'success'  
+        """
+        return VITaskHistoryCollector(self, entity, recursion, states)
 
     def get_hosts(self, from_mor=None):
         """
